--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^12.15.0",
+    "next": "^14.2.0",
+    "pg": "^8.11.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intl": "^7.1.11",
-    "react-router-dom": "^7.6.1",
-    "react-scripts": "5.0.1",
+    "react-player": "^2.16.0",
     "react-scroll": "^1.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set FAST_REFRESH=true && set CHOKIDAR_USEPOLLING=true && set WATCHPACK_POLLING=true && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0"
   },
   "browserslist": {
     "production": [
