--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-intl": "^7.1.11",
     "react-player": "^2.16.0",
     "react-scroll": "^1.9.3",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
